# lvgl-esp32-smartthings-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/api/: api_smartthings.c  api_smartthings.h
main/api/certs/: smartthings_root_cert.pem
main/button/: button.c  button.h
main/display/: display_init.c  display_init.h
main/ui/: lvgl_init.c  lvgl_init.h  ui_smartthings.c  ui_smartthings.h
main/ui/assets/animations/: anim_ac_on.json  anim_ac_on_json.h  anim_btn_loading.json  anim_btn_loading_json.h  anim_btn_turn_on_state.json  anim_btn_turn_on_state_json.h  anim_loading.json  anim_loading_json.h  anim_tv_on.json  anim_tv_on_json.h  anim_tv_turn_off.json  anim_tv_turn_off_json.h  anim_tv_turn_on.json  anim_tv_turn_on_json.h
main/ui/assets/fonts/: lv_font_montserrat_bold_24.c  lv_font_montserrat_bold_28.c  lv_font_montserrat_bold_34.c  lv_font_montserrat_semibold_16.c  lv_font_montserrat_semibold_20.c
main/ui/assets/images/: img_ac_icon_static.c  img_ac_off.c  img_app_background.c  img_btn_off_state.c  img_btn_on_state.c  img_droplet.c  img_on_off.c  img_st_icon.c  img_st_icon_w65_h65.c  img_termometer.c  img_tv_off.c  img_tv_on.c
main/wifi/: wifi_init.c  wifi_init.h
